--- a/sytle.css
+++ b/sytle.css
@@ -6,6 +6,7 @@
 body
 {
     background-image: url(bg.webp);
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
